// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Tenant Form Modal should render correctly when closed 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Close
      </Button>,
      <Button
        aria-label="Save"
        isDisabled={true}
        onClick={[Function]}
      >
        Save
      </Button>,
    ]
  }
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isLarge={false}
  isOpen={false}
  isSmall={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Create Tenant"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Name
      </Label>
      <TextInput
        aria-label="Name"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="text"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Schedule Start Date
      </Label>
      <TextInput
        aria-label="Schedule Start Date"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Draft Length (days)
      </Label>
      <TextInput
        aria-label="Draft Length"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Publish Notice (days)
      </Label>
      <TextInput
        aria-label="Publish Notice"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Publish Length (days)
      </Label>
      <TextInput
        aria-label="Publish Length"
        className=""
        defaultValue="7"
        isDisabled={true}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Rotation Length (days)
      </Label>
      <TextInput
        aria-label="Rotation Length"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Timezone
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        emptyText="Select a timezone"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;

exports[`New Tenant Form Modal should render correctly when opened 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Close
      </Button>,
      <Button
        aria-label="Save"
        isDisabled={true}
        onClick={[Function]}
      >
        Save
      </Button>,
    ]
  }
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isLarge={false}
  isOpen={true}
  isSmall={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Create Tenant"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Name
      </Label>
      <TextInput
        aria-label="Name"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="text"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Schedule Start Date
      </Label>
      <TextInput
        aria-label="Schedule Start Date"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Draft Length (days)
      </Label>
      <TextInput
        aria-label="Draft Length"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Publish Notice (days)
      </Label>
      <TextInput
        aria-label="Publish Notice"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Publish Length (days)
      </Label>
      <TextInput
        aria-label="Publish Length"
        className=""
        defaultValue="7"
        isDisabled={true}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Rotation Length (days)
      </Label>
      <TextInput
        aria-label="Rotation Length"
        className=""
        isDisabled={false}
        isReadOnly={false}
        isRequired={false}
        isValid={true}
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Timezone
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        emptyText="Select a timezone"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;
